--- a/frontend/src/app/components/booksview/booksview.component.html
+++ b/frontend/src/app/components/booksview/booksview.component.html
@@ -1,7 +1,7 @@
 <div class="py-3">
   <div class="container">
-    <div class="row">
-      <div class="col-sm-3" *ngFor="let book of books">
+    <div class="row ">
+      <div class="col-sm-3 py-2" *ngFor="let book of books">
         <app-bookcard
           [book] = book
           (addToCartEmitter)="addToCart($event)"
