--- a/frontend/src/app/components/booksview/bookcard/bookcard.component.html
+++ b/frontend/src/app/components/booksview/bookcard/bookcard.component.html
@@ -1,18 +1,28 @@
-<div class="card"><img class="card-img-top mx-auto img-thumbnail"
-                       src="{{book.imgUrl}}"
-                       alt="book {{book.id}}">
-  <div class="card-body p-2 pt-3">
-    <strong>"{{book.title}}"</strong>
+<div class="card" id="bookcard">
+  <div class="p-1 mx-auto">
+    <img class="card-img-top"
+         src="{{book.imgUrl}}"
+         alt="book {{book.id}}">
+  </div>
+  <div class="card-body p-2">
+    <span id="title">"{{book.title}}"</span>
     <div> {{book.author}} </div>
-    <div> {{book.year}} - {{book.publisher}}</div>
+    <i> {{book.year}} - {{book.publisher}}</i>
   </div>
-  <div class="input-group p-2">
-    <input type="number" min="1" class="form-control form-control-sm mr-2" placeholder="1"
-                                 id="addToCart" [(ngModel)] = "quantity"
-                                 required="required">
-    <div class="input-group-append">
-      <button class="btn btn-warning btn-sm" data-toggle="modal" data-target=".bd-example-modal-sm" (click)="onAddToCart(book, quantity) "> + 🛒 </button>
-    </div>
+
+  <div class="px-2">
+    <div class="text-right" id="price">&#8364;{{book.price}}</div>
+    <form class="input-group py-2">
+      <input type="number" min="1" class="form-control form-control-sm mr-2" placeholder="1"
+             id="addToCart" name="quantityForm" [(ngModel)]="quantity"
+             required>
+      <div class="input-group-append">
+        <button class="btn btn-warning btn-sm" data-toggle="modal" data-target=".bd-example-modal-sm"
+                (click)="onAddToCart(book, quantity) "> + 🛒
+        </button>
+      </div>
+    </form>
   </div>
+
 </div>
 
