--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -1,41 +1,37 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-3 col-6 p-3">
-      <h5> <b>Main</b> </h5>
+      <h5><b>Main</b></h5>
       <ul class="list-unstyled">
-        <li> <a href="#">Home</a> </li>
-        <li> <a href="#">Features</a> </li>
-        <li> <a href="#">Pricing</a> </li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Features</a></li>
+        <li><a href="#">Pricing</a></li>
       </ul>
     </div>
     <div class="col-lg-3 col-6 p-3">
-      <h5> <b>Others</b> </h5>
+      <h5><b>Others</b></h5>
       <ul class="list-unstyled">
-        <li> <a href="#">FAQ</a> </li>
-        <li> <a href="#">Resources</a> </li>
-        <li> <a href="#">Career</a> </li>
+        <li><a href="#">FAQ</a></li>
+        <li><a href="#">Resources</a></li>
+        <li><a href="#">Career</a></li>
       </ul>
     </div>
     <div class="col-lg-3 col-md-6 p-3">
-      <h5> <b>About</b> </h5>
-      <p class="mb-0"> I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls.</p>
+      <h5><b>About</b></h5>
+      <p class="mb-0"> I am alone, and feel the charm of existence in this spot, which was created for the bliss of
+        souls.</p>
     </div>
     <div class="col-lg-3 col-md-6 p-3">
-      <h5> <b>Follow us</b> </h5>
+      <h5><b>Follow us</b></h5>
       <div class="row">
-        <div class="col-md-12 d-flex align-items-center justify-content-between my-2"> <a href="#">
-          <i class="d-block fa fa-facebook-official text-muted fa-lg mr-2"></i>
-        </a> <a href="#">
-          <i class="d-block fa fa-instagram text-muted fa-lg mx-2"></i>
-        </a> <a href="#">
-          <i class="d-block fa fa-google-plus-official text-muted fa-lg mx-2"></i>
-        </a> <a href="#">
-          <i class="d-block fa fa-pinterest-p text-muted fa-lg mx-2"></i>
-        </a> <a href="#">
-          <i class="d-block fa fa-reddit text-muted fa-lg mx-2"></i>
-        </a> <a href="#">
-          <i class="d-block fa fa-twitter text-muted fa-lg ml-2"></i>
-        </a> </div>
+        <div class="col-md-12 d-flex align-items-center justify-content-between my-2">
+          <!-- Add font awesome icons -->
+          <a href="#" class="fa fa-facebook"></a>
+          <a href="#" class="fa fa-twitter"></a>
+          <a href="#" class="fa fa-snapchat-ghost"></a>
+          <a href="#" class="fa fa-youtube"></a>
+          <a href="#" class="fa fa-instagram"></a>
+        </div>
       </div>
     </div>
   </div>
