--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -10,7 +10,7 @@
 </header>
 
 <!-- Page Content -->
-<div class="py-3 text-center">
+<div class="text-center">
   <div class="container">
     <div class="row">
       <div class="mx-auto col-md-7">
@@ -23,7 +23,7 @@
     </div>
   </div>
 </div>
-
+<app-category></app-category>
 <div class="container">
   <div class="row">
     <div class="col-md-9">
